LibGDX: * self restart options